# haksh

./: .hakshrc  CHANGELOG.md  README.md  haksh.cabal  index.js  package-lock.json  package.json
app/: Main.hs
default_plugins/example/: index.js
default_plugins/git/: index.js
examples/: .hakshrc
src/: index.js
src/utils/: configManager.js
