cabal-version:      2.4
name:               haksh
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: The haskell UNIX shell.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hytracer
maintainer:         cin@moon.rip

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haksh
    main-is:          Main.hs

    build-depends:    process, directory

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
